force-app/main/default/objects/Litmos__User_Record__c/Litmos__User_Record__c.object-meta.xml
<CustomObject>
    <label>User Record</label>
    <nameField>
        <label>Litmos User Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>