force-app/main/default/objects/Litmos__User_Record__c/fields/Litmos__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>