force-app/main/default/objects/Litmos__User_Record__c/fields/Litmos__Contact__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Records</relationshipLabel>
    <relationshipName>User_Records</relationshipName>
    <type>Lookup</type>
</CustomField>