force-app/main/default/objects/Litmos__User_Record__c/fields/Litmos__Course__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course__c</fullName>
    <label>Course</label>
    <referenceTo>Litmos__Course__c</referenceTo>
    <relationshipLabel>User Records</relationshipLabel>
    <relationshipName>User_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>