force-app/main/default/objects/Litmos__User_Record__c/fields/Litmos__LookupId_User__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LookupId_User__c</fullName>
    <formula>IF(Litmos__User__c = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LookupId$User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>