force-app/main/default/objects/Litmos__User_Record__c/fields/Litmos__Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Percentage_Complete__c</fullName>
    <label>Percentage Complete</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>